2014-07-25  6.8.9-6 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-6, SVN revision 16211.

2014-07-24  6.8.9-6 Glenn Randers-Pehrson <glennrp@image...>
  * Use IsOptionMember() instead of LocaleNCompare() in coders/png.c to
    parse the list of excluded and included PNG chunks.

2014-07-19  6.8.9-6 Dirk Lemstra <dirk@snakeware...>
  * Fixed fill-rule in SVG clip path (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=25882).

2014-07-14  6.8.9-6 Glenn Randers-Pehrson <glennrp@image...>
  * Removed some dead code (testing image->matte) in PNG64 encoder.

2014-07-07  6.8.9-6 Dirk Lemstra <dirk@snakeware...>
  * Added support for R5G6B5, RGB5A1 and RGBA4 dds files.

2014-07-01  6.8.9-6 Cristy  <quetzlzacatenango@image...>
  * Write LAB pixels as percentages in the TXT image format (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25830).
  * Throw exception when image morphology differs when comparing (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25927).
  * Remove mogrify backup file (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25683).
  * Read WEBP images from STDIN (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25886).

2014-07-01  6.8.9-5 Cristy  <quetzlzacatenango@image...>
  * New version 6.8.9-5, SVN revision 16123.

2014-06-28  6.8.9-5 Glenn Randers-Pehrson <glennrp@image...>
  * Do not let libpng16 check ICC/sRGB profiles in non-debug runs; we do
    it ourselves anyway.  Avoids emitting "known incorrect profile" warnings.
    For strict profile checking and warning, use "-debug coder".

2014-06-27  6.8.9-5 Dirk Lemstra <dirk@snakeware...>
  * Disabled OpenCL acceleration when image has a 'mask' or 'clip-mask'.

2014-06-25  6.8.9-5 Cristy  <quetzlzacatenango@image...>
  * Use -define profile:skip=icc, for example,  to skip color profiles on read.
