@@ -1,3 +1,7 @@
+2014-07-25  6.8.9-7 Glenn Randers-Pehrson <glennrp@image...>
+  * Relocate initialization of "image_colors" in the PNG encoder, to avoid
+    a possible use of ininitialized variable.
+
 2014-07-25  6.8.9-6 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.9-6, SVN revision 16211.
 
